Table Users {
    id serial [pk]
    email varchar
    password varchar
    role varchar
}

Table Profiles {
    id serial [pk]
    userName varchar
    bio varchar
    UserId int 
}

Table Posts {
    id serial [pk]
    content varchar
    UserId int
}

Table Hashtags {
    id serial [pk]
    name varchar
}

Table Post_Hashtag {
Post_id int
Hashtag_id int

    }

Ref: Profiles.UserId - Users.id
Ref: Posts.UserId > Users.id
Ref: Posts.id < Post_Hashtag.Post_id
Ref: Hashtags.id < Post_Hashtag.Hashtag_id